<resources>
    <string name="appName">EasyAccess</string>
    <string name="appNameTalkBackFriendly">Easy Access</string>
    <string name="txtEmpty"></string>
    <string name="action_settings">Settings</string>
    <string name="txteasyaccessActivated">Easy Access is activated</string>
    <string name="btnNavigationBack">Back</string>
    <string name="btnNavigationHome">Home</string>
    <string name="delete">Backspace</string>
    <string name="ttsError">Error occurred while initializing Text-To-Speech engine</string>
    <string name="title_activity_calling">Calling Screen</string>
    <string name="color">color</string>
    <string name="settings">Settings</string>
    <string name="settingsColor">Color Settings</string>
    <string name="settingsFont">Font Settings</string>
    <string name="settingsVolume">Volume Settings</string>
    <string name="about">About Easy Access</string>
    <string name="callLog">Call Log</string>
    <string name="callLogOptions">Call Log Menu</string>
    <string name="callHistory">Call History</string>
    <string name="contacts">Contacts</string>
    <string name="textMessages">Text Messages</string>
   <string name="textMessagesNotSelected">No Messages are selected.</string>
    <string name="composeTextMessage">Compose Text Message</string>
 	<string name="textMessageRecipient">Text Message Recipient</string>
 	<string name="textSize">19</string>
 	<string name="deleteSingleContacConfirm">Are you sure you want to delete the contact?</string>
    <string name="sim_absent">SIM card is absent. Cannot make call.</string>
    <string name="network_locked">Network is locked. Cannot make call.</string>
    <string name="pin_required">PIN is required to make call.</string>
    <string name="puk_required">PUK is required to make the call.</string>
    <string name="sim_ready">Sim is ready</string>
    <string name="emergency_calls_only">Unable to make call. Only emergency calls can be made. The number you dialled is not an emergency number.</string>
    <string name="no_service">Unable to make call. Service unavailable.</string>
    <string name="power_off">Unable to make call. Aeroplane mode is on.</string>
    <string name="service_unknown_reason">Unable to make call. Please try again later.</string>
    <string name="state_in_service">Service available</string>
    <string name="network_unavailable">Unable to make call due to unavailability of network. Please try again later.</string>
    <string name="roaming_on">Please note that roaming is activated on your phone</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_rejected">Call Rejected</string>
    <string name="btnAnswerCall">Answer Call</string>
    <string name="btnRejectCall">Reject Call</string>
    <string name="btnEndCall">End Call</string>
    <string name="deleted">Deleted</string>
	<string name="current_call_on_hold">Putting the current call on hold and calling </string>
	<string name="calling">Calling </string>
	<string name="call_from">Call from </string>
	<string name="error">Error</string>
	<string name="roaming_activated">Please note that roaming is activated.</string>
    <string name="btnPhoneDialer">Phone\nDialer</string>
    <string name="btnCallLog">Call\nLog</string>
    <string name="btnTextMessages">Text\nMessages</string>
    <string name="btnContacts">Contacts</string>
    <string name="btnStatus">Status</string>
    <string name="btnEmail">Email</string>
    <string name="btnInternet">Internet</string>
    <string name="btnDailyUtilities">Daily Utilities</string>
    <string name="btnRadio">Radio</string>
	<string name="btnAlarmCalendar">Alarm +\nCalendar</string>
    <string name="btnMusicVideo">Music +\nVideo</string>
    <string name="btnBooksNewspapers">Books + News\npapers</string>
    <string name="btnEntertainment">Entertainment</string>
    <string name="btnBooksNewsWeather">Books, News\n+ Weather</string>
    <string name="btnMaps">Maps</string>
    <string name="btnFileBrowsingSharing">File Browsing\n+Sharing</string>
	   <string name="btnFileBrowser">File\nBrowser</string>
    <string name="btnCameraApps">Camera\nApps</string>
    <string name="btnCameraMagnification">Camera +\nMagnification</string>
    <string name="btnSocialNetworks">Social\nNetworks</string>
    <string name="btnSettings">Settings</string>
    <string name="btnMoreAccessibleApps">More\nAccessible\nApps</string>
    <string name="btnAllApps">All Apps</string>
    <string name="msgLoading">Loading All Apps..."</string>
    <string name="btnAlarm">Alarm</string>
    <string name="btnSimpleAlarmClock">Simple Alarm Clock</string>
    <string name="btnCalendar">Calendar</string>
    <string name="btnNoteTakerTodo">Note Taker + To Do</string>
    <string name="btnVoiceRecorder">Voice Recorder</string>
    <string name="btnCalculator">Calculator</string>
    <string name="btnEnglishHindiDictionary">English Hindi Dictionary</string>
    <string name="btnSetNewAlarm">Set New Alarm</string>
    <string name="txtAlarmsEntry1">1st alarm at XX:XX</string>
    <string name="txtAlarmsEntry2">2nd alarm at XX:XX</string>
    <string name="txtAlarmsEntry3">3rd alarm at XX:XX</string>
    <string name="txtAlarmsEntry4">4th alarm at XX:XX</string>
    <string name="txtAlarmsEntry5">5th alarm at XX:XX</string>
    <string name="btnAlarmChange">Change Alarm</string>
    <string name="btnAlarmDisable">Disable Alarm</string>
    <string name="btnAlarmDelete">Delete Alarm</string>
    <string name="btnAlarmSet">Set Alarm</string>
    <string name="txtAlarmTimeUserInput"></string>
    <string name="btnAlarmTurnOff">Turn Off Alarm</string>
    <string name="btnEasyDaisyReader">Easy Daisy Reader</string>
    <string name="btnAccessibleReader">Accessible Reader</string>
    <string name="btnVoiceDreamReader">Voice Dream Reader</string>
    <string name="btnBookshareGoRead">Bookshare Go Read</string>
    <string name="btnDDReaderPlus">DD Reader Plus</string>
    <string name="btnBooks">Books</string>
    <string name="btnNews">News</string>
    <string name="btnAccuWeather">Accu Weather</string>
    <string name="btnDarwinReader">DARWIN Reader</string>
    <string name="btnIdealGroupReader">IDEAL Group Reader</string>
    <string name="btnGooglePlayBooks">Google Play Books</string>
    <string name="btnGoogleNewsstand">Google Play Newsstand</string>
    <string name="btnGoogleDocs">Google Docs</string>
    <string name="btnPhoneCamera">Camera</string>
    <string name="btnOCR">OCR</string>
    <string name="btnDigitalMagnifier">Digital Magnifier</string>
    <string name="btnOtherCameraUtilities">Other Camera Utilities</string>
    <string name="btnGoogleGoggles">Google Goggles</string>
    <string name="btnOCRScanner">OCR Scanner</string>
    <string name="btnColorIdentifier">Color Identifier</string>
    <string name="btnMoneyIdentifier">Money Identifier</string>
    <string name="btnLightDetector">Light Detector</string>
    <string name="btnTapTapSeeRead">Tap Tap see</string>
    <string name="btnTapTapSee">TapTapSee</string>
    <string name="tabCallsDialled">\nOut</string>
    <string name="tabCallsReceived">\nIn</string>
    <string name="tabCallsMissed">\nMissed</string>
    <string name="tabCallsAll">\nAll</string>
    <string name="totalTime">Total\nDuration</string>
    <string name="tabCallsDialledTalkBackFriendly">Outgoing Calls</string>
    <string name="tabCallsReceivedTalkBackFriendly">Incoming Calls</string>
    <string name="tabCallsMissedTalkBackFriendly">Missed Calls</string>
    <string name="tabCallsAllTalkBackFriendly">All Calls</string>
    <string name="tabCallsTimeTalkBackFriendly">Total Duration</string>
    <string name="emptylog">The selected call log is empty</string>
    <string name="tot_dur_incoming">Total duration of incoming calls: </string>
    <string name="tot_dur_outgoing">Total duration of outgoing calls: </string>
    <string name="received">Received</string>
    <string name="missed">Missed</string>
    <string name="dialed">Dialed</string>
    <string name="btnCall">Call</string>
    <string name="btnSendSMS">Send SMS</string>
    <string name="btnViewCallHistory">View Call History</string>
    <string name="btnDeleteFromLog">Delete Call from Log</string>
    <string name="btnAddToContact">Save to Contacts</string>
    <string name="btnViewContact">View Contact</string>
    <string name="logdeletesuccess">Call log deleted</string>
    <string name="logdeletefailure">Could not delete call log</string>
    <string name="inputContactsSearch">Enter name or number</string>
    <string name="save">Save</string>
    <string name="txtContactsDemoEntryREMOVE">Demo Entry</string>
    <string name="loadingcontacts">Loading contacts</string>
    <string name="contactsLoaded">Contacts loaded</string>
    <string name="contactDetails">Contact Details</string>
    <string name="txtContactsName">Firstname Lastname</string>
    <string name="btnContactsNumber1">Call Cellphone\n+49 177 111 1111</string>
    <string name="btnContactsNumber2">Call Home\n+49 40 1111 1111</string>
    <string name="txtAboutHeaderMission">Easy Access mission</string>
    <string name="txtAboutMission">\"Easy Access\'s mission is to invent a completely new operating mode, embedded in the Android DNA, to make mobile technology accessible for seniors, the blind and visually impaired.\"</string>
    <string name="txtAboutSignature">\nEva Kloepper and Caspar Isemer</string>
    <string name="txtAboutHeaderFactFinding">Focus group research</string>
    <string name="txtAboutFactFinding">We thank the following people in particular for their amazing openness and utmost patience during our focus group research in India:</string>
    <string name="txtAboutFocusGroup">
        \nZainab Chinikamwala, Project Coordinator - Bookshare India.
        \nKetan Khotari, Sight Savers
        \nDipendra Manocha, President, DAISY Forum of India
        \nDr. Homiyar Mobedji, CEO - National Asssociation for the Blind - Delhi and Training Consultant - CIS for NVDA - Espeak Project.
        \nDr. Sam Taraporevala, Director, Xavier\'s Resource Centre for the Visually Challenged
    </string>
    <string name="txtAboutHeaderSupporters">Supporters</string>
    <string name="txtAboutCertificates">We further thank the following people for their generous funding and support of Easy Access:</string>
    <string name="txtAboutDonors">
		\nAlastair Bruce
		\nAlexandra Grosskurth
		\nAnna Kauer
		\nAxel Reichmann
		\nBastiaan Gielliet
		\nDr. Bernd Fauser
		\nBirte Gloy
		\nCarola Rienth
		\nChristian Baerwind
		\nChristian Lutterbeck
		\nChristian Veer
		\nChristina Brauer
		\nChristoph Wittmer
		\nDavid Noack
		\nDirk Bensien
		\nDirk Pape
		\nElias Schelto Witsen		
		\nEmilia Niewiadomska
		\nEva Brauckmann
		\nFabian Roecker
		\nFrank Kohl-Boas
		\nFranziska Maack
		\nFrauke Cooper
		\nProf. Dr. Friedrich-Eckart and Dr. Annette Isemer
		\nGert-Jan Lagas
		\nDr. Herbert Schriever
		\nHidde de Vries
		\nIna Strauch
		\nInga Weireter
		\nJan Birkhahn
		\nJan Hieronimi
		\nJannika Bock
		\nDr. Joern Winterberg
		\nDr. Johannes Wilms
		\nJuan Marin
		\nKate Cullimore
		\nKerstin Friedrich
		\nKlaas Flechsig
		\nLaura-Marie Arens
		\nLeopold Graeubig
		\nLeon Ineke
		\nLutz Behrendt
		\nMagdalena Sternberg
		\nMaike Schnell
		\nMarc Lueers
		\nMartin Brauckmann
		\nMatthias Zacek
		\nMax Saile
		\nMaximilian Albert
		\nMichael Braun
		\nMichalina Seekamp
		\nMoritz Habermann
		\nNadine Tylla-Schulze
		\nNicole Mueller
		\nPetar Markovic
		\nPetri Kokko
		\nSabine van Velsen
		\nSabrina Mause
		\nSarah Fix-Baehre
		\nSebastian Busshardt
		\nSebastian Schuele
		\nSilvia Tornier
		\nSimon Krueger
		\nSoeren Lueders
		\nStefan Alich
		\nStefan Lein
		\nStefan Volk
		\nSven Angel
		\nThomas Steffen
		\nThorsten Hermes
		\nTimo Seewald
		\nTobias Guhlke
		\nTobias Pohl
		\nTobias Schmidt
		\nUlrich and Eva Krueger
		\nDr. Ulrich Bork
		\nUwe Eisenbeis
    </string>
</resources>