 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homescreen2"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/homescreen_background" > 
    
<TableLayout
    android:gravity="center_vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerVertical="true"
    android:layout_weight="1"
    android:stretchColumns="0,2" 
    android:weightSum="3"
    android:paddingLeft="12px" 
	android:paddingRight="12px"
	android:paddingTop="12px" 
	android:paddingBottom="12px" > 

	<TableRow
	    android:layout_weight="1" 
	    android:gravity="center_vertical" >
	   
		<Button  
			android:id="@+id/btnInternet"
			android:text="@string/btnInternet"
			android:contentDescription="@string/btnInternet"
			android:layout_weight="1"
		    android:layout_width="0dip" 
		    android:layout_height="match_parent" 
		    android:background="@drawable/card"
		    android:textColor="@drawable/card_textcolor" 
		    android:textStyle="bold"
		    android:textSize="@dimen/card_textsize_regular"
		    android:gravity="center"
			android:focusable="true"
		/>	
		
		
		<TextView  
			android:id="@+id/txtEmpty1"
			android:text="@string/txtEmpty"
		    android:layout_width="12px" 
		    android:layout_height="1px"
		    android:background="@color/homescreen_background"		    
		    android:focusable="false"
		/>	
		
		
		<Button  
			android:id="@+id/btnAlarmCalendar"
			android:text="@string/btnAlarmCalendar"
			android:contentDescription="@string/btnAlarmCalendar"
			android:layout_weight="1"
		    android:layout_width="0dip" 
		    android:layout_height="match_parent" 
			android:background="@drawable/card"
		    android:textColor="@drawable/card_textcolor" 		    
		    android:textStyle="bold"
		    android:textSize="@dimen/card_textsize_regular"
		    android:gravity="center"
			android:focusable="true"
		/>


		<TextView
			android:id="@+id/txtEmpty2"
			android:text="@string/txtEmpty"
			android:layout_width="12px"
			android:layout_height="1px"
			android:background="@color/homescreen_background"
			android:focusable="false"
			/>
		<Button  
			android:id="@+id/btnDailyUtilities"
			android:text="@string/btnDailyUtilities"
			android:contentDescription="@string/btnDailyUtilities"
			android:layout_weight="1"
		    android:layout_width="0dip" 
		    android:layout_height="match_parent" 
			android:background="@drawable/card"
		    android:textColor="@drawable/card_textcolor" 		    
		    android:textStyle="bold"
		    android:textSize="@dimen/card_textsize_regular"
		    android:gravity="center"
			android:focusable="true"
		/>
	</TableRow>  
	
	<TableRow
	    android:layout_weight="0" 
	    android:gravity="center_vertical" >

		<TextView  
			android:id="@+id/txtEmpty3"
		    android:text="@string/txtEmpty"			
		    android:layout_width="1px" 
		    android:layout_height="12px"
		    android:layout_span="2"
		    android:background="@color/homescreen_background"
		    android:focusable="false"
		/>			
	
	</TableRow>

	<TableRow
	    android:layout_weight="1" 
	    android:gravity="center_vertical" >
		
		<Button  
			android:id="@+id/btnRadio"
			android:text="@string/btnRadio"
			android:contentDescription="@string/btnRadio"			
			android:layout_weight="1"
		    android:layout_width="0dip" 
		    android:layout_height="match_parent" 
		    android:background="@drawable/card" 
		    android:textColor="@drawable/card_textcolor"  
		    android:textStyle="bold"
		    android:textSize="@dimen/card_textsize_regular"
		    android:gravity="center"
			android:focusable="true"
		/>
		
		<TextView  
			android:id="@+id/txtEmpty4"
		    android:text="@string/txtEmpty"			
		    android:layout_width="12px" 
		    android:layout_height="1px"
		    android:background="@color/homescreen_background"
		    android:focusable="false"
		/>	
		
		<Button  
			android:id="@+id/btnMusicVideo"
			android:text="@string/btnMusicVideo"
			android:contentDescription="@string/btnMusicVideo"			
			android:layout_weight="1"
		    android:layout_width="0dip" 
		    android:layout_height="match_parent" 
		    android:background="@drawable/card" 
		    android:textColor="@drawable/card_textcolor" 
		    android:textStyle="bold"
		    android:textSize="@dimen/card_textsize_regular"
		    android:gravity="center"
			android:focusable="true"
		/>

		<TextView
			android:id="@+id/txtEmpty5"
			android:text="@string/txtEmpty"
			android:layout_width="12px"
			android:layout_height="1px"
			android:background="@color/homescreen_background"
			android:focusable="false"
			/>
		<Button  
			android:id="@+id/btnEntertainment"
			android:text="@string/btnEntertainment"
			android:contentDescription="@string/btnEntertainment"			
			android:layout_weight="1"
		    android:layout_width="0dip" 
		    android:layout_height="match_parent" 
		    android:background="@drawable/card" 
		    android:textColor="@drawable/card_textcolor" 
		    android:textStyle="bold"
		    android:textSize="@dimen/card_textsize_regular"
		    android:gravity="center"
			android:focusable="true"
		/>	
	</TableRow> 

	<TableRow
	    android:layout_weight="0" 
	    android:gravity="center_vertical" >

		<TextView  
			android:id="@+id/txtEmpty6"
		    android:text="@string/txtEmpty"			
		    android:layout_width="1px" 
		    android:layout_height="12px"
		    android:layout_span="2"
		    android:background="@color/homescreen_background"
		    android:focusable="false"
		/>			
	
	</TableRow> 	
	
	<TableRow
	    android:layout_weight="1" 
	    android:gravity="center_vertical" >
		
		<Button  
			android:id="@+id/btnBooksNewsWeather"
			android:text="@string/btnBooksNewsWeather"
			android:contentDescription="@string/btnBooksNewsWeather"			
			android:layout_weight="1"
		    android:layout_width="0dip" 
		    android:layout_height="match_parent" 
		    android:background="@drawable/card" 
		    android:textColor="@drawable/card_textcolor"
		    android:textStyle="bold"
		    android:textSize="@dimen/card_textsize_regular"
		    android:gravity="center"
			android:focusable="true"		
		/>
		
		<TextView  
			android:id="@+id/txtEmpty7"
		    android:text="@string/txtEmpty"			
		    android:layout_width="12px" 
		    android:layout_height="1px"
		    android:background="@color/homescreen_background"
		    android:focusable="false"
		/>	
		
		<Button  
			android:id="@+id/btnBooksNewspapers"
			android:text="@string/btnBooksNewspapers"
			android:contentDescription="@string/btnBooksNewspapers"			
			android:layout_weight="1"
		    android:layout_width="0dip" 
		    android:layout_height="match_parent" 
		    android:background="@drawable/card" 
		    android:textColor="@drawable/card_textcolor"
		    android:textStyle="bold"
		    android:textSize="@dimen/card_textsize_regular"
		    android:gravity="center"
			android:focusable="true"		
		/>

		<TextView
			android:id="@+id/txtEmpty8"
			android:text="@string/txtEmpty"
			android:layout_width="12px"
			android:layout_height="1px"
			android:background="@color/homescreen_background"
			android:focusable="false"
			/>


		<Button  
			android:id="@+id/btnMaps"
			android:text="@string/btnMaps"
			android:contentDescription="@string/btnMaps"			
			android:layout_weight="1"
		    android:layout_width="0dip" 
		    android:layout_height="match_parent" 
		    android:background="@drawable/card" 
		    android:textColor="@drawable/card_textcolor" 
		    android:textStyle="bold"
		    android:textSize="@dimen/card_textsize_regular"
		    android:gravity="center"
			android:focusable="true"		
		/>	
	</TableRow>   
    
</TableLayout>
		
</LinearLayout>		